syntax = "proto3";

package pb;

message BalancesRequest {
  string Market = 1;
}

message Balance {
  string Currency = 1;
  string Available = 2;
  string Frozen = 3;
}

message Balances {
  Balance Right = 1;
  Balance Left = 2;
}

service BalancesService {
  rpc GetBalances(BalancesRequest) returns (Balances) {}
}